[package]
name = "tofu_on_fire"
version = "0.1.0"
authors = ["rekz"]
edition = "2018"

[dependencies]
amethyst = { version = "0.10.0", features = ["sdl_controller"] }
specs-derive = "*"
shred = "*"
shred-derive = "*"
serde = "1.0"
serde_derive = "1.0"
rand = "0.6"
ron = "0.4"

[features]
nightly = [
    "amethyst/nightly",
]
