[package]
name = "tofu_on_fire"
version = "0.1.0"
authors = ["rekz"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15", features = ["vulkan", "sdl_controller"] }
specs-derive = "0.4"
shred = "0.10"
serde = "1.0"
serde_derive = "1.0"
rand = "0.7"
ron = "0.6"
log = "0.4"

[features]
default = []
include_resources = []
